syntax = "proto2";

package atsc;

message FieldState {
  required int32 version = 1;
  repeated Channel channels = 2;
}

message Channel {
  optional bool a = 1;
  optional bool b = 2;
  optional bool c = 3;
  optional int32 duration = 4;
  optional int32 interval_time = 5;
  optional int32 calls = 6;
}